change to java 8