@@ -1,10 +1,10 @@
 #!/usr/bin/env bash
 
-export JAVA_HOME=/usr/java/java7
+export JAVA_HOME=/usr/java/java8
 
 export CATALINA_BASE=/usr/share/nexus
 export CATALINA_HOME=/usr/share/tomcat7
-export CATALINA_OPTS="-server -Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true"
+export CATALINA_OPTS="-server -Xmx1024m -XX:MaxMetaspaceSize=256m -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true"
 export CATALINA_PID="$CATALINA_BASE/tomcat.pid"
 
 export PATH=$PATH:$JAVA_HOME/bin;
